tests/errors/control_flow/comprehension_nan_inf_steps.sad
# Comprehension with infinitesimal step test
risk {
    # Step of 1e-300 expressed as long decimal to avoid lexer scientific notation limits
    [x Cycle x = 0 : 1 : 0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001 when False]
} trap ValueError e {
    show(e.message)
}
